# MCP-ServerAllInOne

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  OFFLINE_INSTALL.md  README.md  config.docker.yaml  config.example.yaml  config.integrated.example.yaml  config.openclaw.example.yaml  docker-compose.mcp.yml  docker-compose.playwright.yml  docker-compose.yml  install.sh  install_and_run.sh  pyproject.toml
.cursor/rules/: ru-release-workflow.mdc
.github/workflows/: ci.yml
deploy/: BUNDLE.md  Dockerfile  Dockerfile.buildkit-proxy  README.md  config.production.example.yaml  docker-compose.prod.ssh-extra.yml  docker-compose.prod.yml  env.production.example
deploy/examples/: ssh_hosts_fragment.yaml  ssh_inventory.csv
docs/: ALERTING.md  CAPABILITIES.md  EXECUTIVE_ONEPAGER.html  EXECUTIVE_ONEPAGER.md  INSTALL_AND_RELEASE.md  KAFKA_TOPICS.md  LLM_SYSTEM_PROMPT.md  MCP_AND_WEB_COMPLETE_REFERENCE.html  MCP_PLAYWRIGHT.md  OFFLINE_AND_PROXY_INSTALL.md  OPENSEARCH_MCP.md  PRODUCT_OVERVIEW.md  S3_MCP.md  SSH_SCALE.md  TOOL_CALL_AUDIT.md  presentation-leadership-4slides.html
playwright-browsers/: README.md
release/: DEPLOY_QUICKSTART.md  README.md
s3-mcp/: README.md
scripts/: build-release.ps1  build-release.sh  build_minimal_local_zip.py  build_offline_bundle.py  build_patch_zip.py  build_s3_mcp_zip.py  generate_ssh_hosts_yaml.py  install.sh  run-demo.ps1  run-demo.sh  vendor-playwright-browsers.ps1  vendor-playwright-browsers.sh
src/s3_mcp/: __main__.py  (+5 more)
tests/: test_alerts_kafka_resolve.py  test_alerts_notify.py  test_backend_tls.py  test_config_allowlisted_queries.py  test_config_diagnose.py  test_config_resolve.py  test_config_s3_mcp_patch.py  test_embed_mcp_lifespan.py  test_embed_mcp_path.py  test_embedded_mcp_reload.py  test_health.py  test_mcp_agent_guide.py  test_mcp_telemetry.py  test_mtls_resolve.py  test_opensearch_rag_config.py  test_postgres_allowlist.py  test_postgres_database_policy.py  test_postgres_sql_literals.py  test_postgres_statement_timeout.py  test_prometheus_cron.py  test_s3_client.py  test_s3_mcp_policy.py  test_s3_mcp_server.py  test_ssh_command_validate.py  test_ssh_hosts_merge.py  test_tool_audit.py  test_ui_interval_options.py  test_ui_pages_legacy.py  test_ui_paths.py
(+75 files in other folders)
