[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stack-mcp-server"
version = "0.2.9"
description = "MCP по HTTP: модули данных и опциональный браузерный MCP (mcp-playwright)"
readme = "README.md"
authors = [{ name = "Gos Stepan Ulievich" }]
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.2.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "opensearch-py>=2.4.0",
  "kafka-python>=2.0.2",
  "psycopg[binary]>=3.1",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.31.0",
  "httpx>=0.27.0",
  "paramiko>=3.4.0",
  "mcp-playwright>=0.1.1,<0.2",
]

[project.scripts]
stack-mcp = "stack_mcp.server:main"
stack-mcp-ui = "stack_mcp.info_app:main"
stack-mcp-playwright = "stack_mcp.playwright_http:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
